--- a/lib/Mini/CMakeLists.txt
+++ b/lib/Mini/CMakeLists.txt
@@ -2,12 +2,14 @@ add_mlir_dialect_library(MLIRMini
         Dialect.cpp
         AST.cpp
         MLIRGen.cpp
+        ShapeInferencePass.cpp
 
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/Mini
 
         DEPENDS
         MLIRMiniOpsIncGen
+        ShapeInferenceInterfaceIncGen
 
 	LINK_LIBS PUBLIC
 	MLIRIR
