--- a/include/Mini/CMakeLists.txt
+++ b/include/Mini/CMakeLists.txt
@@ -4,3 +4,9 @@ mlir_tablegen(Ops.cpp.inc -gen-op-defs)
 mlir_tablegen(Dialect.h.inc -gen-dialect-decls)
 mlir_tablegen(Dialect.cpp.inc -gen-dialect-defs)
 add_public_tablegen_target(MLIRMiniOpsIncGen)
+
+
+set(LLVM_TARGET_DEFINITIONS ShapeInferenceInterface.td)
+mlir_tablegen(ShapeInferenceOpInterface.h.inc -gen-op-interface-decls)
+mlir_tablegen(ShapeInferenceOpInterface.cpp.inc -gen-op-interface-defs)
+add_public_tablegen_target(ShapeInferenceInterfaceIncGen)
