--- a/lib/Mini/CMakeLists.txt
+++ b/lib/Mini/CMakeLists.txt
@@ -4,6 +4,7 @@ add_mlir_dialect_library(MLIRMini
         MLIRGen.cpp
         ShapeInferencePass.cpp
         ToyCombine.cpp
+        MakeTiledImplementation.cpp
 
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/Mini
@@ -12,6 +13,7 @@ add_mlir_dialect_library(MLIRMini
         MLIRMiniOpsIncGen
         ShapeInferenceInterfaceIncGen
         ToyCombineIncGen
+        MakeTiledImplementationIncGen
 
 	LINK_LIBS PUBLIC
 	MLIRIR
